feat: Add genre list route
